--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
                     <span class="duration">June 2024 - April 2025</span>
                 </div>
                 <ul class="experience-details">
-                    <li>Lead computer vision R&D for commercial applications</li>
-                    <li>Built GAN-based systems for Persian carpet pattern generation (85% authenticity)</li>
-                    <li>Developed LSTM networks for handwriting recognition with real-time processing</li>
+                    <li>R&D on efficient handwritten recongnition model development using sequence models such as RNN and LSTM</li>
+                    <li>Set data version control, and deployed containerized AI services(10+) using Docker, docker compose, nginx and certbot</li>
                     <li>Created presentation generation systems using LangChain for automated content</li>
-                    <li>Built APIs with Flask and React.js, integrated WebSocket for real-time features</li>
+                    <li>Devleopved APIs with Flask and Django, integrated WebSocket, background jobs to handle concurrent users in real-time</li>
                 </ul>
             </div>
         </section>
