--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <!-- About Section -->
         <section class="about">
             <h2>About</h2>
-            <p>Machine Learning Engineer with 10+ months of professional experience building production AI systems. 
-            I specialize in computer vision, generative AI, and time series forecasting. I enjoy solving complex problems with AI 
-            and have experience leading technical projects from research to production deployment.</p>
+            <p>Computer Engineer and CTO/CoFounder with a passion for advancing AI research and education. Currently working as an AI Research Intern at NSDevil, South Korea, focusing on computer vision and generative AI. My research includes developing GANs for Persian carpet design synthesis and achieving 4% MAPE in stock price prediction using deep learning.</p>
+            <p>Beyond research, I'm a full-stack developer with expertise in Django, React, and Node.js, and have built everything from blockchain auction platforms to 3D game engines with C++ and DirectX 11. I'm also passionate about knowledge sharing, creating free educational content on DevOps, Reinforcement Learning, and Python programming.</p>
+            <p>With experience coordinating 1000+ students through educational programs and bridging technology gaps in schools across Nepal, I believe in making AI and technology accessible to everyone.</p>
         </section>
 
         <!-- Experience Section -->
@@ -70,6 +70,111 @@
                     <li>Created presentation generation systems using LangChain for automated content</li>
                     <li>Devleopved APIs with Flask and Django, integrated WebSocket, background jobs to handle concurrent users in real-time</li>
                 </ul>
+            </div>
+        </section>
+
+        <!-- Education Section -->
+        <section class="education">
+            <h2>Education</h2>
+            <div class="education-item">
+                <div class="education-header">
+                    <h3>Bachelor's in Computer Engineering</h3>
+                    <span class="institution">Institute of Engineering, Pulchowk Campus</span>
+                    <span class="location">Lalitpur, Nepal</span>
+                    <span class="grade">Aggregate Score: 82%</span>
+                </div>
+            </div>
+        </section>
+
+        <!-- Certifications Section -->
+        <section class="certifications">
+            <h2>Online Certifications</h2>
+            <div class="certifications-grid">
+                <div class="cert-category">
+                    <h3>AI & Machine Learning</h3>
+                    <ul class="cert-list">
+                        <li>Samsung: Artificial Intelligence</li>
+                        <li>Machine Learning Specialization</li>
+                        <li>Sequences, Time Series, and Prediction</li>
+                        <li>Generative AI with LLM</li>
+                        <li>NLP with Classification and Vector Spaces</li>
+                        <li>Introduction to TensorFlow for Artificial Intelligence, Machine Learning</li>
+                    </ul>
+                </div>
+                <div class="cert-category">
+                    <h3>Development & Cloud</h3>
+                    <ul class="cert-list">
+                        <li>Meta: Advanced React</li>
+                        <li>IBM: Docker, Openshift, Kubernetes</li>
+                        <li>Tutorials Point: Cloud Services, AWS</li>
+                    </ul>
+                </div>
+                <div class="cert-category">
+                    <h3>Cybersecurity</h3>
+                    <ul class="cert-list">
+                        <li>Cisco, Ethical Hacking Council: Cyber Security</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Trainings Section -->
+        <section class="trainings">
+            <h2>Professional Trainings</h2>
+            <div class="training-item">
+                <div class="training-header">
+                    <h3>Applied Data Science</h3>
+                    <span class="training-org">Samsung Innovation Campus</span>
+                </div>
+                <ul class="training-details">
+                    <li>K-Means, DBSCAN, KNN, SVM, AdaBoost</li>
+                    <li>Deep Learning, CNN, RNN, LSTM</li>
+                    <li>Capstone project: Stock Price Prediction combining technical indicators, financial indicators, news sentiments, and macroeconomic factors</li>
+                </ul>
+            </div>
+            <div class="training-item">
+                <div class="training-header">
+                    <h3>Cybersecurity</h3>
+                    <span class="training-org">Logpoint Pvt. Ltd.</span>
+                </div>
+                <ul class="training-details">
+                    <li>SIEM, SOAR, EDR, XDR</li>
+                    <li>SQL Injection, XSS Attacks, DoS, DDoS</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Free Courses Section -->
+        <section class="free-courses">
+            <h2>Free Courses</h2>
+            <div class="courses-grid">
+                <div class="course-card">
+                    <h3>DevOps</h3>
+                    <p>Complete DevOps course covering containerization, CI/CD pipelines, infrastructure automation, and cloud deployment strategies.</p>
+                    <div class="course-link">
+                        <a href="https://www.youtube.com/watch?v=UNMHCbIqWXY&list=PLA4ytea_68uPywXhwrMFOslEkDc_VdxEB" target="_blank">
+                            <i class="fab fa-youtube"></i> Watch Course
+                        </a>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <h3>Reinforcement Learning</h3>
+                    <p>Comprehensive reinforcement learning course covering Q-learning, policy gradients, actor-critic methods, and deep RL applications.</p>
+                    <div class="course-link">
+                        <a href="https://www.youtube.com/watch?v=bsTi3oP4RmI&list=PLA4ytea_68uMgR4lfn0sN2YS6VWR-emVc" target="_blank">
+                            <i class="fab fa-youtube"></i> Watch Course
+                        </a>
+                    </div>
+                </div>
+                <div class="course-card">
+                    <h3>Python</h3>
+                    <p>Complete Python programming course from basics to advanced topics including data structures, OOP, and practical applications.</p>
+                    <div class="course-link">
+                        <a href="https://www.youtube.com/watch?v=ohpfrDXPOH0&list=PLA4ytea_68uPO6PAaVm9cJBJoVwv_RV-G" target="_blank">
+                            <i class="fab fa-youtube"></i> Watch Course
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
 
