--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- About Section -->
         <section class="about">
             <h2>About</h2>
-            <p>Computer Engineer and CTO/CoFounder with a passion for advancing AI research and education. Currently working as an AI Research Intern at NSDevil, South Korea, focusing on computer vision and generative AI. My research includes developing GANs for Persian carpet design synthesis and achieving 4% MAPE in stock price prediction using deep learning.</p>
+            <p>Computer Engineer and CTO/CoFounder with a passion for advancing AI research and education. Currently working as an AI/ML Research Engineer at NSDevil, South Korea, focusing on computer vision and generative AI. My research includes developing GANs for Persian carpet design synthesis and achieving 4% MAPE in stock price prediction using deep learning.</p>
             <p>Beyond research, I'm a full-stack developer with expertise in Django, React, and Node.js, and have built everything from blockchain auction platforms to 3D game engines with C++ and DirectX 11. I'm also passionate about knowledge sharing, creating free educational content on DevOps, Reinforcement Learning, and Python programming.</p>
             <p>With experience coordinating 1000+ students through educational programs and bridging technology gaps in schools across Nepal, I believe in making AI and technology accessible to everyone.</p>
         </section>
